[package]
name = "no_center_net"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
arc-swap = "1.7.1"
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
anyhow = "1.0.100"
tower-http = { version = "0.6.6", features = ["cors"] }
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
